--- a/Clustering/WM9G1_BDAI_Clustering.ipynb
+++ b/Clustering/WM9G1_BDAI_Clustering.ipynb
@@ -70,10 +70,10 @@
         "3. [Clustering](#Clustering)<br>\n",
         "   3.1 [K-Means](#K-Means)<br>\n",
         "   &nbsp;&nbsp;&nbsp;&nbsp; 4.1.1 [Description](#K-Means_description)<br>\n",
-        "   &nbsp;&nbsp;&nbsp;&nbsp; 4.1.2 [Use case - customers segmentation](#K-Means_use_case)<br>\n",
+        "   &nbsp;&nbsp;&nbsp;&nbsp; 4.1.2 [Use case - car features segmentation](#K-Means_use_case)<br>\n",
         "   3.2 [DBSCAN](#DBSCAN)<br>\n",
         "   &nbsp;&nbsp;&nbsp;&nbsp; 4.2.1 [Description](#DBSCAN_description)<br>\n",
-        "   &nbsp;&nbsp;&nbsp;&nbsp; 4.2.2 [Use case - customers segmentation](#DBSCAN_use_case)<br>\n",
+        "   &nbsp;&nbsp;&nbsp;&nbsp; 4.2.2 [Use case - car features segmentation](#DBSCAN_use_case)<br>\n",
         "4. [Comparison and discussion](#Comparison_and_discussion)<br>\n",
         "5. [References](#References)<br>\n",
         "\n",
